server dropdown clipping bugfix

--- a/src/app/fileImport/components/FileImport.less
+++ b/src/app/fileImport/components/FileImport.less
@@ -8,6 +8,12 @@
   justify-content: center; // center vertically
   overflow: hidden;
 
+  // TODO: find better way of preventing dropdown option clipping
+  .file-import-inner-server-step {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+
 	.file-import-inner {
     min-width: 300px;
     max-width: 100%;
